--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -7,7 +7,7 @@
 
 {% block page_header %}
     <div class="container header-container">
-        <div class="row">
+        <div class="row mt-5 pt-5">
             <div class="col">
                 <h1 class="text-center text-red">My Profile</h1>
             </div>
@@ -17,7 +17,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mt-5">
+    <div class="container mt-5 pt-5">
         <div class="row">
             <!-- Profile Info Section -->
             <div class="col-12 col-md-6">
