Fixed issues with stripe payment and migrated changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
 
     <title>NARTH VAD3R MERCH {% block extra_title %}{% endblock %}</title>
 </head>
+<body>
     <header class="container-fluid fixed-top">
         <!-- Top Navbar -->
         <div id="topnav" class="row bg-black py-lg-2 d-flex align-items-center">
@@ -141,50 +142,52 @@
         </div>            
     </div>
 </header>
-<body class="container-fluid mt-5 pt-5" style="padding-bottom: 100px;" id="top">
+    <div class="container-fluid mt-5 pt-5" style="padding-bottom: 100px;" id="top">
 
-{% if messages %}
-    <div class="message-container">
-        {% for message in messages %}
-            {% with 'includes/toasts/toast_'|add:message.tags|add:'.html' as toast_template %}
-                {% include toast_template %}
-            {% endwith %}
-        {% endfor %}
+        {% if messages %}
+            <div class="message-container">
+                {% for message in messages %}
+                    {% with 'includes/toasts/toast_'|add:message.tags|add:'.html' as toast_template %}
+                        {% include toast_template %}
+                    {% endwith %}
+                {% endfor %}
+            </div>
+        {% endif %}
+
+
+        <main class="container-fluid mt-5 pt-5">
+            {% block content %}{% endblock %}
+        </main>
     </div>
-{% endif %}
+
+        {% block postloadjs %}
+            <script>
+                $('.toast').toast('show');
+            </script>
+            <script>
+                window.onscroll = function() {
+                    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+                        document.getElementById("back-to-top").style.display = "block";
+                    } else {
+                        document.getElementById("back-to-top").style.display = "none";
+                    }
+                };
+            
+                document.getElementById("back-to-top").onclick = function(event) {
+                    event.preventDefault();
+                    window.scrollTo({ top: 0, behavior: "smooth" });
+                };
+            </script>
+
+        {% endblock %}
 
 
-<main class="container-fluid mt-5 pt-5">
-    {% block content %}{% endblock %}
-</main>
-
-{% block postloadjs %}
-    <script>
-        $('.toast').toast('show');
-    </script>
-    <script>
-        window.onscroll = function() {
-            if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-                document.getElementById("back-to-top").style.display = "block";
-            } else {
-                document.getElementById("back-to-top").style.display = "none";
-            }
-        };
-    
-        document.getElementById("back-to-top").onclick = function(event) {
-            event.preventDefault();
-            window.scrollTo({ top: 0, behavior: "smooth" });
-        };
-    </script>
-
-{% endblock %}
+    <footer class="bg-black text-white text-center py-3 mt-5">
+        <p>&copy; 2024 NARTH VAD3R MERCH. All rights reserved.</p>
+        <a href="#top" class="btn btn-danger" id="back-to-top">
+            &#8593; Back to Top
+        </a>
+    </footer>
 </body>
-
-<footer class="bg-black text-white text-center py-3 mt-5">
-    <p>&copy; 2024 NARTH VAD3R MERCH. All rights reserved.</p>
-    <a href="#top" class="btn btn-danger" id="back-to-top">
-        &#8593; Back to Top
-    </a>
-</footer>
 
 </html>
