--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -122,7 +122,7 @@
                         <div id="card-errors" class="text-danger mb-3" role="alert"></div>
 
                         <!-- Hidden field to pass the client_secret -->
-                        <input type="hidden" name="client_secret" id="id_client_secret" value="{{ client_secret }}">
+                        <input type="hidden" name="client_secret" value="{{ client_secret }}">
 
                         <!-- Save Information Checkbox (optional) -->
                         <div class="form-check mb-3">
@@ -148,11 +148,11 @@
             </div>
         </div>
     </div>
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
 
 {% block postloadjs %}
     {{ block.super }}
-    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
-    {{ client_secret|json_script:"id_client_secret" }}
-    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
